@@ -18054,7 +18054,7 @@ pragma Linker_Options ("-lmy_lib");
 @end itemize
 
 Note that you may also load a library dynamically at
-run time given its filename, as illustrated in the GNAT ``plugins'' example
+run time given its filename, as illustrated in the GNAT @file{plugins} example
 in the directory @file{share/examples/gnat/plugins} within the GNAT
 install area.
 
